# READCSV

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  LeastSquareID.cpp  LeastSquareID.h  ReadData.h  main.cpp  test.txt
data/: ActualValues.csv  file.json  setting.json  silinecek.json  test.json  torqueInput.csv  torqueIpnut.csv  write.json
mil-cnc-min_log/mil-cnc-min/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  trajectory_dump.csv
mil-cnc-min_log/mil-cnc-min/cnc-app/: CMakeLists.txt  global_data_area.cpp  global_data_area.h  main.cpp  module_1.cpp  module_1.h  module_2.cpp  module_2.h  module_base.h  module_services.h  servo_faker.cpp  servo_faker.h  servo_master.cpp  servo_master.h  servo_master_base.h  sim_common.h  sim_config.h  sim_functions.cpp  sim_functions.h  sim_instruction.h  sim_math.h  sim_math_constants.h  sim_math_data_types.h  sim_math_impl.hpp  sim_math_mat3.h  sim_math_mat3.hpp  sim_math_utils.h  sim_math_v3.h  sim_math_v3.hpp  sim_utils.h  version.h.in
src/: CMakeLists.txt  Data.cpp  Data.h  LeastSquareID.cpp  LeastSquareID.h  Write.cpp  Write.h  atapulse.cpp  atapulse.h  ex.cpp  frequency.cpp  frequency.h  leastsquareid.cpp  leastsquareid.h  leastsquareıd.cpp  main.cpp  plot.cpp  plot.h  pulse.cpp  pulse.h  read.cpp  read.h  signal.cpp  signal.h  sinesweep.cpp  sinesweep.h  torquesignal.cpp  torquesignal.h  write.cpp  write.h
test/: CMakeLists.txt  freqeuncy_response_test.hpp  parameter_estimation_test.hpp  read_test.cpp  signal_generator_test.hpp  test_main.cpp  test_root.cpp
