
cmake_minimum_required(VERSION 3.16.3)

project(system_identification)  

# set(SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
# set(TEST_DIR "${PROJECT_SOURCE_DIR}/test")
# set(3RD_PARTY_DIR "${PROJECT_SOURCE_DIR}/vendor")
# set(DATA_DIR "${PROJECT_SOURCE_DIR}/data")


add_subdirectory(src)
add_subdirectory(test)
